mini-projet/modules/security_group_module/main.tf
resource "aws_security_group" "allow_ssh_http_https" {
  name        = var.sg_name
  description = "Allow SSH, http and https inbound traffic and outbound traffic"

  ingress {
    description = "TLS from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "http from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "ssh from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

output "output_sg_name" {
  value = "${aws_security_group.allow_ssh_http_https.name}"
  description = "The name of our security group"
}
